Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,10 +30,10 @@ steps:
 
 - script: |
     echo Display API key
-    echo $(API_KEY) "${{ variables.app_key }}"
+    echo $(API_KEY) $(KEY) "${{ variables.app_key }}"
     # Example API call with Authorization header and JSON data
     curl -X GET https://odevio.deuse.dev/api/v1/builds/ \
-         -H "Authorization: JWT $(API_KEY)" \
+         -H "Authorization: JWT $(KEY)" \
          -H "Content-Type: application/json" \
          -d '{
             "application": "${{ variables.app_key }}",
