Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,6 @@ steps:
             "app_version": "${{ variables.app_version }}",
             "build_number": "${{ variables.build_number }}",
             "mode": "${{ variables.mode }}",
-            "target": "${{ variables.target }}",
+            "target": "${{ variables.target }}"
          }'
   displayName: 'Launch a build from Odevio'
